Import win32 dwrite font backend from
https://hg.mozilla.org/mozilla-central/file/7338d7d940913147f8a1b1e8bd2b25ab255f4373/gfx/cairo/cairo/src

and add to the meson build. I've omitted the
cairo_surface_set_subpixel_antialiasing() API and its use in quartz
and dwrite. Not sure if that is needed.

It compiles. Not tested.

--- a/src/meson.build
+++ b/src/meson.build
@@ -177,6 +177,9 @@ cairo_feature_sources = {
   'cairo-win32-font': [
     'win32/cairo-win32-font.c',
   ],
+  'cairo-win32-dwrite-font': [
+    'win32/cairo-dwrite-font.cpp',
+  ],
   'cairo-gl': [
     'cairo-gl-composite.c',
     'cairo-gl-device.c',
