ci: disable aarch64 neon asm in pixman to fix android build
To work around build failures, see #515

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -311,7 +311,7 @@ meson android arm64 fedora:
       ar          = toolchain + '-ar'
       strip       = toolchain + '-strip'
       EOF
-    - meson setup --cross-file android-cross-file.txt build
+    - meson setup --cross-file android-cross-file.txt -Dpixman:a64-neon=disabled build
     - meson compile --verbose -C build
 
 meson macOS:
