--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,7 +221,7 @@ fedora meson build:
     paths:
       - 'builddir/meson-logs/'
 
-# Based on https://gitlab.freedesktop.org/gstreamer/gst-ci/-/blob/master/gitlab/ci_template.yml
+# Based on https://gitlab.freedesktop.org/gstreamer/gstreamer/-/blob/main/.gitlab-ci.yml (.build windows)
 .build meson windows:
   image: $WINDOWS_IMAGE
   stage: 'build'
@@ -272,8 +272,9 @@ meson vs2017 x86:
     ARCH: 'x86'
 
 meson android arm64 fedora:
-  # See https://gitlab.freedesktop.org/gstreamer/gst-ci/container_registry/164 for current images
-  image: 'registry.freedesktop.org/gstreamer/gst-ci/amd64/android-fedora:2020-10-22.0-master'
+  # TODO: should probably build our own image here some day
+  # See https://gitlab.freedesktop.org/gstreamer/gstreamer/container_registry/7689 for current images
+  image: 'registry.freedesktop.org/gstreamer/gstreamer/amd64/android-fedora:2020-10-22.0-master'
   stage: 'build'
   artifacts:
     name: "${CI_JOB_NAME}_${CI_COMMIT_SHA}"
