[user-font] Implement subpixel-positioning
See:

https://github.com/harfbuzz/harfbuzz/pull/3411#issuecomment-1033118545
https://github.com/harfbuzz/harfbuzz/pull/3411#issuecomment-1033125311
https://github.com/harfbuzz/harfbuzz/pull/3411#issuecomment-1037765840

Basically the code in cairo-image-compositor.c:composite_glyphs()
is flooring glyph positions and putting some phase in the glyph-id.
This was being lost in the user-font backend. Fetch that and put it
in the recording-surface's device-transform translation, to be applied.

--- a/test/meson.build
+++ b/test/meson.build
@@ -392,6 +392,7 @@ test_sources = [
   'user-font-mask.c',
   'user-font-proxy.c',
   'user-font-rescale.c',
+  'user-font-subpixel.c',
   'world-map.c',
   'white-in-noop.c',
   'xcb-huge-image-shm.c',
