meson: Add xml option and disable by default
Just like autotools does.

--- a/meson.build
+++ b/meson.build
@@ -756,8 +756,7 @@ if zlib_dep.found()
   conf.set('CAIRO_HAS_INTERPRETER', 1)
 endif
 
-# TODO: add xml option and disable by default
-if zlib_dep.found() and png_dep.found()
+if zlib_dep.found() and png_dep.found() and get_option('xml').enabled()
   feature_conf.set('CAIRO_HAS_XML_SURFACE', 1)
   built_features += [{
     'name': 'cairo-xml',
