--- a/src/meson.build
+++ b/src/meson.build
@@ -178,6 +178,7 @@ cairo_feature_sources = {
     'win32/cairo-win32-font.c',
   ],
   'cairo-win32-dwrite-font': [
+    'win32/cairo-dwrite-font-public.c',
     'win32/cairo-dwrite-font.cpp',
   ],
   'cairo-gl': [
