--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -209,6 +209,7 @@ fedora meson build:
       ${DEFAULT_MESON_ARGS}
       -Dgl-backend=gl
   script:
+    - export CFLAGS="-Werror -Wno-error=deprecated-declarations"
     - meson builddir ${MESON_ARGS}
     - ninja -C builddir
     # - ninja -C builddir test
