python script to view tests results
testtables.js no longer works in modern browsers as local file access
has been disabled. This script runs a python http server that serves
the contents of the current directory then opens the test results in
the webbrowser

--- a/test/meson.build
+++ b/test/meson.build
@@ -629,6 +629,11 @@ exe = executable('cairo-test-suite', [cairo_test_suite_sources, test_sources, ca
     libpdiff_dep],
 )
 
+html_files = ['index.html', 'testtable.js', 'view-test-results.py']
+foreach file : html_files
+  configure_file(input: file, output : file, copy: true)
+endforeach
+
 env = environment()
 
 env.set('srcdir', meson.current_source_dir())
