meson: Only link cairo-script-interpreter with liblzo
The rest of cairo (and therefore most external packages that depend
on cairo) doesn't make any use of liblzo.

Signed-off-by: Simon McVittie <smcv@debian.org>

--- a/util/cairo-script/meson.build
+++ b/util/cairo-script/meson.build
@@ -27,7 +27,7 @@ csi_trace_sources = [
 libcairoscript = library('cairo-script-interpreter',
   cairoscript_interpreter_sources,
   include_directories: [incbase],
-  dependencies: deps + [libcairo_dep],
+  dependencies: deps + [libcairo_dep, lzo_dep],
   soversion: cairo_version_sonum,
   version: cairo_libversion,
   install: true,
