Remove explicit dependency on libssp
It's not needed anymore.

Linking explicitly with libssp was required for toolchains where the
target libc doesn't implement stack smashing protection routines on
its own, and instead delegates to the generic implementations provided
by libssp. Notably, this was the case of mingw-w64 toolchains.

After discussion upstream with Meson developers [1], the stance taken
is that Meson users (and Meson itself) shall have no knowledge of the
libc internals and whether libssp is required. instead, libc's should
declare a dependency on the generic libssp on their own by means of
.spec files [2].

Following the discussion in Meson Github, the issue was then fixed in
mingw-w64 upstream [3].

References:
 * https://github.com/mesonbuild/meson/issues/10673
 * https://gcc.gnu.org/onlinedocs/gcc/Spec-Files.html
 * https://github.com/msys2/MINGW-packages/issues/13401

--- a/meson.build
+++ b/meson.build
@@ -69,7 +69,7 @@ if cc.get_id() != 'msvc'
   ]
 
   if get_option('optimization') in ['1', '2', '3']
-    cflags += ['-Wp,-D_FORTIFY_SOURCE=2', '-Wl,-lssp']
+    cflags += '-Wp,-D_FORTIFY_SOURCE=2'
   endif
 
   supported_cflags = cc.get_supported_arguments(cflags)
