--- a/util/cairo-trace/meson.build
+++ b/util/cairo-trace/meson.build
@@ -12,9 +12,9 @@ libcairotrace = library('cairo-trace', cairo_trace_sources,
   include_directories: [incbase, incsrc],
   dependencies: deps,
   link_args: extra_link_args,
-  c_args: ['-DSHARED_LIB_EXT="@0@"'.format(shared_lib_ext),] + pthread_c_args,
+  c_args: ['-DSHARED_LIB_EXT="@0@"'.format(shared_lib_ext),],
   install: true,
-  install_dir: join_paths(get_option('prefix'), get_option('libdir'), 'cairo'),
+  install_dir: get_option('libdir') / 'cairo',
 )
 
 trace_conf = configuration_data()
